--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,7 @@
 http {
     server {
         location /{
-            root /usr/share/nginx/html;
-            try_files $uri /index.html;
+            proxy_pass http://frontend:3000;
         }
         location /api {
             proxy_pass http://backend:8080;
