--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,19 @@
 http {
+    
+    upstream frontend {
+        ip_hash;
+        server frontend:3000;
+    }
+    upstream backend {
+        ip_hash;
+        server backend:8080;
+    }
     server {
         location /{
-            proxy_pass http://frontend:3000;
+            proxy_pass frontend;
         }
         location /api {
-            proxy_pass http://backend:8080;
+            proxy_pass backend;
         }
     }
 }
