--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,11 @@ services:
     container_name: frontend
     # ports:
     #   - '3000:3000'
-    volumes:
-      - ./reto-frontend:/app
-      - /app/node_modules
+    # volumes:
+      #- ./reto-frontend:/app
+      #- /app/node_modules
+    networks:
+      - frontend-net
   nginx:
     container_name: nginx
     image: nginx
@@ -21,14 +23,14 @@ services:
       - "20080:80"
       - "20443:443"
     networks:
-      - frontend
-      - backend
-      - database
+      - frontend-net
+      - backend-net
+      - database-net
     depends_on:
       - frontend
       
 
 networks:
-  frontend:
-  backend:
-  database:
+  frontend-net:
+  backend-net:
+  database-net:
