--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,19 +1,22 @@
+events {
+}
 http {
     
     upstream frontend {
         ip_hash;
         server frontend:3000;
     }
-    upstream backend {
-        ip_hash;
-        server backend:8080;
-    }
+    # upstream backend {
+    #     ip_hash;
+    #     server backend:8080;
+    #     server 127.0.0.11 backup;
+    # }
     server {
         location /{
-            proxy_pass frontend;
+            proxy_pass http://frontend;
         }
-        location /api {
-            proxy_pass backend;
-        }
+        # location /api {
+        #     proxy_pass http://backend;
+        # }
     }
 }
