--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,16 @@ services:
       - database-net
     depends_on:
       - frontend
+  rabbit:
+    container_name: rabbit
+    image: rabbitmq:3-management
+    environment:
+      - RABBITMQ_DEFAULT_PASS=pass
+    ports:
+        - 5672:5672
+        - 15672:15672
+    networks:
+      - backend-net
       
 
 networks:
