--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,72 @@ services:
         - 15672:15672
     networks:
       - backend-net
-      
+  mongo-1:
+    container_name: mongo-1
+    image: mongo:7.0
+    restart: always
+    healthcheck:
+      test:  mongosh --port 27017 --quiet      
+      interval: 5s
+      timeout: 30s
+      start_period: 0s
+      start_interval: 1s
+      retries: 30
+    environment:
+      # MONGO_INITDB_ROOT_USERNAME: root
+      # MONGO_INITDB_ROOT_PASSWORD: root
+      MONGO_INITDB_DATABASE: reto
+    ports:
+      - 27017:27017
+    volumes:
+      - ./mongo/config:/docker-entrypoint-initdb.d
+      - "mongo1_data:/data/db"
+      - "mongo1_config:/data/configdb"
+
+    networks:
+      - database-net
+  # mongo-1:
+  #   container_name: mongo-1
+  #   image: mongo:7.0
+  #   restart: always
+  #   command: ["--replSet", "rs0", "--bind_ip_all", "--port", "27017"]
+  #   healthcheck:
+  #     test: echo "try { rs.status() } catch (err) { rs.initiate({_id:'rs0',members:[{_id:0,host:'host.docker.internal:27017',priority:1},{_id:1,host:'host.docker.internal:27018',priority:0.5}]}) }" | mongosh --port 27017 --quiet      
+  #     interval: 5s
+  #     timeout: 30s
+  #     start_period: 0s
+  #     start_interval: 1s
+  #     retries: 30
+  #   environment:
+  #     # MONGO_INITDB_ROOT_USERNAME: root
+  #     # MONGO_INITDB_ROOT_PASSWORD: root
+  #     MONGO_INITDB_DATABASE: reto
+  #   ports:
+  #     - 27017:27017
+  #   volumes:
+  #     - ./mongo/config:/docker-entrypoint-initdb.d
+  #     - "mongo1_data:/data/db"
+  #     - "mongo1_config:/data/configdb"
+
+  #   networks:
+  #     - database-net
+  # mongo-2:
+  #   container_name: mongo-2
+  #   image: mongo:7.0
+  #   command: ["--replSet", "rs0", "--bind_ip_all", "--port", "27018"]
+  #   ports:
+  #     - 27018:27018
+  #   extra_hosts:
+  #     - "host.docker.internal:host-gateway"
+  #   volumes:
+  #     - "mongo2_data:/data/db"
+  #     - "mongo2_config:/data/configdb"
+
+volumes:
+  mongo1_data:
+  mongo1_config:
+  mongo2_data:
+  mongo2_config:
 
 networks:
   frontend-net:
