--- a/event-processing/Dockerfile
+++ b/event-processing/Dockerfile
@@ -6,10 +6,9 @@ COPY ./requirements.txt /code/requirements.txt
 #
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
-RUN mkdir -p /code/app
-COPY ./main.py /code/app
-COPY ./main.py /code/app
+
+COPY ./main.py /code
+COPY ./providers /code/providers
 
 #
-EXPOSE 3205
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "3205"]
+CMD ["python", "-u", "./main.py"]
