--- a/reto-frontend/package.json
+++ b/reto-frontend/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "mongodb": "^6.5.0",
     "next": "14.2.2",
+    "next-connect": "^1.0.0",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18"
