--- a/reto-frontend/package.json
+++ b/reto-frontend/package.json
@@ -15,6 +15,7 @@
     "next-connect": "^1.0.0",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18"
   },
   "devDependencies": {
