--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,17 @@ services:
       context: ./reto-frontend
       dockerfile: Dockerfile
     container_name: frontend
-    # ports:
-    #   - '3000:3000'
+    ports:
+      - '3000:3000'
     # volumes:
       #- ./reto-frontend:/app
       #- /app/node_modules
+    environment:
+      - MONGODB_URI=mongodb://reto:Extrovert-Unbiased9-Oxidize-Recycler@mongo-1:27016/?authSource=reto
     networks:
       - frontend-net
+      - backend-net
+      - database-net
   nginx:
     container_name: nginx
     image: nginx
@@ -50,7 +54,7 @@ services:
     image: mongo:7.0
     restart: always
     healthcheck:
-      test:  mongosh --port 27017 --quiet      
+      test:  mongosh --port 27016 --quiet      
       interval: 5s
       timeout: 30s
       start_period: 0s
@@ -60,8 +64,9 @@ services:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: Hamper-Snout0-Sprinkled-Unhidden
       MONGO_INITDB_DATABASE: reto
+    command: mongod --port 27016
     ports:
-      - 27017:27017
+      - 27016:27016
     volumes:
       - ./mongo/config:/docker-entrypoint-initdb.d
       - "mongo1_data:/data/db"
@@ -75,7 +80,7 @@ services:
   #   restart: always
   #   command: ["--replSet", "rs0", "--bind_ip_all", "--port", "27017"]
   #   healthcheck:
-  #     test: echo "try { rs.status() } catch (err) { rs.initiate({_id:'rs0',members:[{_id:0,host:'host.docker.internal:27017',priority:1},{_id:1,host:'host.docker.internal:27018',priority:0.5}]}) }" | mongosh --port 27017 --quiet      
+  #     test: echo "try { rs.status() } catch (err) { rs.initiate({_id:'rs0',members:[{_id:0,host:'host.docker.internal:27017',priority:1},{_id:1,host:'host.docker.internal:27016',priority:0.5}]}) }" | mongosh --port 27017 --quiet      
   #     interval: 5s
   #     timeout: 30s
   #     start_period: 0s
@@ -97,7 +102,7 @@ services:
   # mongo-2:
   #   container_name: mongo-2
   #   image: mongo:7.0
-  #   command: ["--replSet", "rs0", "--bind_ip_all", "--port", "27018"]
+  #   command: ["--replSet", "rs0", "--bind_ip_all", "--port", "27016"]
   #   ports:
   #     - 27018:27018
   #   extra_hosts:
@@ -130,7 +135,7 @@ services:
       dockerfile: Dockerfile
     container_name: event-processing
     environment:
-      - MONGODB_URI=mongodb://reto:Extrovert-Unbiased9-Oxidize-Recycler@mongo-1:27017/?authSource=reto
+      - MONGODB_URI=mongodb://reto:Extrovert-Unbiased9-Oxidize-Recycler@mongo-1:27016/?authSource=reto
       - RABBIT_HOST=rabbit
       - RABBIT_PORT=5672
       - RABBIT_USER=guest
@@ -143,6 +148,29 @@ services:
     networks:
       - backend-net
       - database-net
+    profiles:
+      - backend
+
+  event-generation:
+    build: 
+      context: ./event-generation
+      dockerfile: Dockerfile
+    container_name: event-generation
+    ports:
+      - 3210:3210
+    environment:
+      - AVG_TIME_BETWEEN_EVENTS_MS=1000
+      - STD_DV_TIME_BETWEEN_EVENTS_MS=100
+      - GITHUB_ENABLED=true
+      - AZURE_REPOS_ENABLED=false
+      - GITLAB_ENABLED=false
+      - GITHUB_ACTIONS_ENABLED=false
+      - AZURE_PIPELINES_ENABLED=false
+      - WS_HOST=event-ingestion:3205
+    depends_on:
+      - event-ingestion
+    networks:
+      - backend-net
     profiles:
       - backend
   
