--- a/reto-frontend/package.json
+++ b/reto-frontend/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-datepicker": "^6.2.0",
     "bootstrap": "^5.3.3",
     "mongodb": "^6.5.0",
     "next": "14.2.2",
