--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     container_name: rabbit 
     user: rabbit
     image: rabbitmq:3-management
-    restart: unless-stopped:5
+    restart: on-failure
     environment:
       - RABBITMQ_DEFAULT_PASS=pass
     ports:
