--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,6 +12,9 @@ http {
     #     server 127.0.0.11 backup;
     # }
     server {
+        listen 443;
+        listen [::]:80;
+        server_name reto.planni.me;
         location /{
             proxy_pass http://frontend;
         }
