[feat] added default response to 80 tcp

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,8 +12,19 @@ http {
     #     server 127.0.0.11 backup;
     # }
     server {
-        listen 443;
+        listen 80;
         listen [::]:80;
+        server_name reto.planni.me;
+        location /{
+            return 200 'hello world!';
+        }
+        # location /api {
+        #     proxy_pass http://backend;
+        # }
+    }
+    server {
+        listen 443;
+        listen [::]:443;
         server_name reto.planni.me;
         location /{
             proxy_pass http://frontend;
