--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,7 @@ http {
     #     server 127.0.0.11 backup;
     # }
     server {
-        listen 80;
+        listen 80 default_server;
         listen [::]:80;
         server_name reto.planni.me;
         location /{
