--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,9 +23,12 @@ http {
         # }
     }
     server {
-        listen 443;
-        listen [::]:443;
+        listen 443 ssl;
+        listen [::]:443 ssl;
         server_name reto.planni.me;
+        ssl_certificate /etc/ssl/certs/reto.planni.me/fullchain.pem;
+        ssl_certificate_key  /etc/ssl/certs/reto.planni.me/privkey.pem;
+        ssl_protocols       TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
         location /{
             proxy_pass http://frontend;
         }
