[fix] fixed wrong pytest command

--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -36,7 +36,7 @@ jobs:
           RABBIT_PASS: pass
         run: |
           pip install pytest 
-          pipenv run pytest
+          pytest tests/
           
       
   
